# Gitnuro

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  build.gradle.kts  compose-desktop.pro  gitnuro.iss  gradle.properties  latest.json  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_with_tests.yml  linux.yml  release.yml  windows.yml
app/: build.gradle.kts
app/src/main/resources/: libgitnuro_rs.dylib
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
common/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
gradle/: libs.versions.toml
icons/: icon.icns
rs/: Cargo.toml  build.rs  rust-toolchain.toml  uniffi.toml
rs/src/: gitnuro.udl  lib.rs  repository_watcher.udl  ssh.rs  watch_directory.rs
src/main/: rules.txt
src/main/composeResources/values/: strings.xml
src/main/kotlin/: Branches.kt  CommitChanges.kt  Diff.kt  DiffEntryType.kt  GPreferences.kt  GitManager.kt  Log.kt  RepositorySelected.kt  Stashes.kt  SystemDialogs.kt  UncommitedChanges.kt  main.kt
src/main/kotlin/app/: App.kt  AppConstants.kt  AppPreferences.kt  AppStateManager.kt  CommitNode.kt  Constants.kt  DropDownOption.kt  ErrorsManager.kt  GPreferences.kt  Main.kt  SideMenuUtils.kt  TempFilesManager.kt  main.kt
src/main/kotlin/components/: ScrollableLazyColumn.kt
src/main/kotlin/credentials/: CredentialsStateManager.kt  GProcess.kt  GRemoteSession.kt  GSessionManager.kt  HttpCredentialsProvider.kt
src/main/kotlin/extensions/: DateExtensions.kt  DiffEntryExtensions.kt  InputStreamExtensions.kt  RefExtensions.kt  StatusExtensions.kt  StringExtensions.kt
src/main/resources/: log4j.properties
ui/: build.gradle.kts
(+1644 files in other folders)
