[package]
name = "gitnuro-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "gitnuro_rs"

[dependencies]
notify = "6.1.1"
thiserror = "1.0.56"
libssh-rs = { version = "0.3.3", features = ["vendored", "vendored-openssl"] }
kotars = { git = "https://github.com/JetpackDuba/kotars.git" }
jni = "0.21.1"

[profile.release]
strip = true