[package]
name = "gitnuro-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "gitnuro_rs"

[dependencies]
notify = "8.0.0"
thiserror = "2.0.11"
libssh-rs = { features = ["vendored", "vendored-openssl"], git = "https://github.com/JetpackDuba/libssh-rs.git", branch="main" }
libssh-rs-sys = { features = ["vendored", "vendored-openssl"], git = "https://github.com/JetpackDuba/libssh-rs.git", branch="main" }
kotars = { git = "https://github.com/JetpackDuba/kotars.git" }
jni = "0.21.1"
uniffi = { version = "0.31.1", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.31.1", features = [ "build" ] }


[profile.release]
strip = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"